name:                network-bytestring
version:             0.1.2.1
synopsis:            Fast, memory-efficient, low-level networking
description:         Fast, memory-efficient, low-level socket functions
                     that use 'Data.ByteString's instead of 'String's.
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell <johan.tibell@gmail.com>
maintainer:          Johan Tibell <johan.tibell@gmail.com>
category:            Network
build-type:          Custom
cabal-version:       >= 1.6
homepage:            http://github.com/tibbe/network-bytestring
extra-source-files:  README.md, examples/*.hs, tests/*.hs

library
  exposed-modules:
    Network.Socket.ByteString
    Network.Socket.ByteString.Lazy
  other-modules:
    Network.Socket.ByteString.Internal

  if !os(windows)
    other-modules:
      Network.Socket.ByteString.IOVec
      Network.Socket.ByteString.MsgHdr

  build-depends:
    base       < 4.1,
    bytestring < 1.0,
    network    >= 2.2.1.1 && < 2.3

  extensions: CPP, ForeignFunctionInterface
  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
