name:           network
version:        2.3.2.1
license:        BSD3
license-file:   LICENSE
maintainer:     Johan Tibell <johan.tibell@gmail.com>
synopsis:       Low-level networking interface
description:    Low-level networking interface
category:       Network
build-type:     Configure
cabal-version:  >=1.8
extra-tmp-files:
  config.log config.status autom4te.cache network.buildinfo
  include/HsNetworkConfig.h
extra-source-files:
  README examples/*.hs tests/*.hs config.guess config.sub install-sh
  configure.ac configure network.buildinfo.in
  include/HsNetworkConfig.h.in include/HsNet.h
  -- C sources only used on some systems
  cbits/ancilData.c cbits/asyncAccept.c cbits/initWinSock.c
  cbits/winSockErr.c
homepage:       http://github.com/haskell/network
bug-reports:    https://github.com/haskell/network/issues

library
  exposed-modules:
    Network
    Network.BSD
    Network.Socket
    Network.Socket.ByteString
    Network.Socket.ByteString.Lazy
    Network.Socket.Internal
    Network.URI
  other-modules:
    Network.Socket.ByteString.Internal

  if !os(windows)
    other-modules:
      Network.Socket.ByteString.IOVec
      Network.Socket.ByteString.MsgHdr

  build-depends:
    base >= 3 && < 4.10,
    bytestring,
    parsec >= 3.1

  if !os(windows)
    build-depends:
      unix >= 2

  extensions:
    CPP, DeriveDataTypeable, ForeignFunctionInterface, TypeSynonymInstances
  include-dirs: include
  includes: HsNet.h
  install-includes: HsNet.h HsNetworkConfig.h
  c-sources: cbits/HsNet.c
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

test-suite simple
  hs-source-dirs: tests
  main-is: Simple.hs
  type: exitcode-stdio-1.0

  build-depends:
    base < 5,
    bytestring,
    HUnit,
    network,
    test-framework,
    test-framework-hunit

test-suite uri
  hs-source-dirs: tests
  main-is: uri001.hs
  type: exitcode-stdio-1.0

  build-depends:
    base < 5,
    HUnit,
    network,
    test-framework,
    test-framework-hunit

source-repository head
  type:     git
  location: git://github.com/haskell/network.git
